--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="materialize is a material design based mutipurpose responsive template">
+        <meta name="description" content="ProLong Services is a material design based mutipurpose responsive template">
         <meta name="keywords" content="material design, card style, material template, portfolio, corporate, business, creative, agency">
         <meta name="author" content="trendytheme.net">
 
-        <title>Coming Soon</title>
+        <title>ProLong Services</title>
 
         <!--  favicon -->
         <link rel="shortcut icon" href="assets/img/ico/favicon.png">
@@ -114,7 +114,7 @@
                 <div class="row">
                     <div class="col-md-6">
                     	<h2 class="font-25 text-bold text-uppercase mb-30">About startup</h2>
-                    	<p>materialize material design multi-purpose html template. It comes with huge content and background variants. <a href="#">materialize</a> is an awesome new company for web resources is coming very soon. We are nearly there..</p>
+                    	<p>ProLong Services material design multi-purpose html template. It comes with huge content and background variants. <a href="#">ProLong Services</a> is an awesome new company for web resources is coming very soon. We are nearly there..</p>
 
                       <div class="progress-section">
                           <span class="progress-title">UX Design</span>
@@ -209,7 +209,7 @@
                             <img src="assets/img/logo-white.png" alt="">
                           </div>
 
-                          <span class="copy-text">Copyright &copy; 2016 <a href="#">Materialize</a> &nbsp; | &nbsp;  All Rights Reserved &nbsp; | &nbsp;  Designed By <a href="#">TrendyTheme</a></span>
+                          <span class="copy-text">Copyright &copy; 2016 <a href="#">ProLong Services</a> &nbsp; | &nbsp;  All Rights Reserved &nbsp; | &nbsp;  Designed By <a href="#">TrendyTheme</a></span>
                           <div class="footer-intro">
                             <p>Penatibus tristique velit vestibulum adipiscing habitant aenean feugiat at condimentum aptent odio orci vulputate hac mollis a.Vestibulum adipiscing gravida justo a ac euismod vitae.</p>
                           </div>
