--- a/pro.html
+++ b/pro.html
@@ -135,7 +135,7 @@
 
               <div class="text-center mb-80 wow fadeInUp">
                   <h2 class="section-title text-uppercase">What We Do</h2>
-                  <p class="section-sub">Quisque non erat mi. Etiam congue et augue sed tempus. Aenean sed ipsum luctus, scelerisque ipsum nec, iaculis justo. Sed at vestibulum purus, sit amet viverra diam nulla ac nisi rhoncus.</p>
+                  <p class="section-sub">We provide complete solution for Web + mobile development with free one time SEO.</p>
               </div>
 
 
@@ -145,11 +145,11 @@
                         <div class="featured-wrapper">
                           <div class="intro-header">
                               <i class="material-icons white-text">&#xE53B;</i>
-                              <h2 class="white-text">Creative Artist</h2>
+                              <h2 class="white-text">Graphics Design</h2>
                           </div>
 
                           <div class="content white-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis repellat quo vitae tempora.</p>
+                            <p>We design Creative Logos,Mobile screens</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -164,7 +164,7 @@
                           </div>
 
                           <div class="content white-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis repellat quo vitae tempora.</p>
+                            <p>Full responsive Bootstrap and jQuery websites design.</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -180,7 +180,7 @@
                           </div>
 
                           <div class="content white-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis repellat quo vitae tempora.</p>
+                            <p>Material design app for android and great looking apps for iOS.</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -195,7 +195,7 @@
                           </div>
 
                           <div class="content white-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis repellat quo vitae tempora.</p>
+                            <p>Searching for innovative ideas for creating beautiful things.</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -204,11 +204,9 @@
 
               <div class="row padding-top-100">
                   <div class="col-md-7">
-                      <h2 class="text-bold mb-30">Creative Artist</h2>
+                      <h2 class="text-bold mb-30">Graphics Design</h2>
                       
-                      <p>Quickly procrastinate functionalized human capital with equity invested experiences. Rapidiously provide access to extensible solutions after pandemic supply chains. Credibly supply resource sucking channels before areas Dynamically harness cooperative partnerships rather than just in time total linkage. Dramatically syndicate plug and play <a href="#">professional with focused</a>. Credibly supply resource sucking channels before areas.</p>
-
-                      <p>Lorem ipsum dolor sit amet cr adipiscing elit. In maximus ligula semper <a href="#">metus pellentesque</a> mattis.</p>
+                      <p>We design innovative logos for websites and brands, we also design app icons for Android and iOS apps.</p>
                   </div>
 
                   <div class="col-md-5">
@@ -230,7 +228,7 @@
 
               <div class="text-center mb-80 wow fadeInUp">
                   <h2 class="section-title text-uppercase">Work together</h2>
-                  <p class="section-sub">Quisque non erat mi. Etiam congue et augue sed tempus. Aenean sed ipsum luctus, scelerisque ipsum nec, iaculis justo. Sed at vestibulum purus, sit amet viverra diam nulla ac nisi rhoncus.</p>
+                  <p class="section-sub">Join us and work with us. we provide complete solution for Websites with Android and iOS apps. You can also join our team if you can develop Websites,Android app or iOS apps. You are most welcome.</p>
               </div>
 
               <div class="featured-carousel brand-dot">
@@ -240,7 +238,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are creative</h2>
-                          <p>Porttitor communicate pandemic data rather than enabled niche pandemic data rather markets neque pulvinar vitae.</p>
+                          <p>We build creative ideas</p>
                       </div>
                   </div><!-- /.featured-item -->
 
@@ -290,7 +288,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are Developer</h2>
-                          <p>Porttitor communicate pandemic data rather than enabled niche pandemic data rather markets neque pulvinar vitae.</p>
+                          <p>We develop Android,iOS apps and websites.</p>
                       </div>
                   </div><!-- /.featured-item -->
 
@@ -300,7 +298,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are Designer</h2>
-                          <p>Porttitor communicate pandemic data rather than enabled niche pandemic data rather markets neque pulvinar vitae.</p>
+                          <p>We design creative and logos for websites and brands.</p>
                       </div>
                   </div><!-- /.featured-item -->
 
@@ -310,7 +308,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are Expert</h2>
-                          <p>Porttitor communicate pandemic data rather than enabled niche pandemic data rather markets neque pulvinar vitae.</p>
+                          <p>We have expert team, who design creative graphics, awesome Android and iOS apps and fully responsive websites.</p>
                       </div>
                   </div><!-- /.featured-item -->
               </div>
