--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         <hr>
 
         
-<section class="section-padding">
+<section id="works" class="section-padding">
             <div class="container">
 
               <div class="text-center mb-50">
