--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="ProLong Services is a material design based mutipurpose responsive template">
-        <meta name="keywords" content="material design, card style, material template, portfolio, corporate, business, creative, agency">
+        <meta name="keywords" content="Web application development,Website designer,Digital marketing strategy,online advertising,web developer,ios app development,mobile app development,app design,make an app,android app development,ux designer,use experience design">
         <meta name="author" content="trendytheme.net">
 
         <title>ProLong Services</title>
