--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="ProLong Services is a material design based mutipurpose responsive template">
+        <meta name="description" content="We provide complete solution for web application development,ios app development,android app development and ux designs with online advertising">
         <meta name="keywords" content="Web application development,Website designer,Digital marketing strategy,online advertising,web developer,ios app development,mobile app development,app design,make an app,android app development,ux designer,use experience design">
         <meta name="author" content="trendytheme.net">
 
@@ -117,7 +117,7 @@
                             <b>Web Developer</b>
                             <b>Web Designer</b>
                             <b>Graphics Designer</b>
-                            <b>SEO</b>
+                            <b>Digital Marketer</b>
                         </span>
                     </h1>
 
