--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@
 
             <div class="secondary-footer brand-bg darken-2">
                 <div class="container">
-                    <span class="copy-text">Copyright &copy; 2016 <a href="#">ProLong Services</a> &nbsp;  | &nbsp;  All Rights Reserved &nbsp;  | &nbsp;  Designed By <a href="#">TrendyTheme</a></span>
+                    <span class="copy-text">Copyright &copy; 2017 <a href="#">ProLong Services</a> &nbsp;  | &nbsp;  All Rights Reserved</span>
                 </div><!-- /.container -->
             </div><!-- /.secondary-footer -->
         </footer>
