--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 
               <div class="text-center mb-80 wow fadeInUp">
                   <h2 class="section-title text-uppercase">What We Do</h2>
-                  <p class="section-sub">We provide complete solution for Web + mobile development with free one time SEO.</p>
+                  <p class="section-sub">Take your brand to new height of success with prolong services. We provide complete solution for Web design/development, mobile app design/development with free one-time SEO and ASO services.
+Our Experienced team of designers, developers and digital marketers analyze each and every prospective of project and deliver best and unique solution which help to boost your business revenue and generate more traffic.
+</p>
               </div>
 
 
@@ -149,7 +151,7 @@
                           </div>
 
                           <div class="content white-text">
-                            <p>We design Creative Logos,Mobile screens</p>
+                            <p>We provide full range of graphic design solution for website and mobile application including innovative logos for websites and brand, app design and icons for Android and iOS apps and we also design flyer, brochure for marketing and sale. </p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -164,7 +166,7 @@
                           </div>
 
                           <div class="content white-text">
-                            <p>Full responsive Bootstrap and jQuery websites design.</p>
+                            <p>Prolong services help businesses by providing full responsive bootstrap and jQuery website design. Our professional web designers always use new technology and tools which will enlighten your site and help to boost conversions. </p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -180,7 +182,7 @@
                           </div>
 
                           <div class="content white-text">
-                            <p>Material design app for android and great looking apps for iOS.</p>
+                            <p>We take your business to next level with our custom mobile app development services for both android and iOS platforms. We design and develop native and highly performance centric mobile apps that engage more customers.</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -195,7 +197,7 @@
                           </div>
 
                           <div class="content white-text">
-                            <p>Searching for innovative ideas for creating beautiful things.</p>
+                            <p>Product research is a collaboration of marketer research. Prolong services offers effective and innovative ideas that can increase your business’s chance of success. </p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -206,7 +208,7 @@
                   <div class="col-md-7">
                       <h2 class="text-bold mb-30">Graphics Design</h2>
                       
-                      <p>We design innovative logos for websites and brands, we also design app icons for Android and iOS apps.</p>
+                      <p>We provide full range of graphic design solution for website and mobile application including innovative logos for websites and brand, app design and icons for Android and iOS apps and we also design flyer, brochure for marketing and sale. </p>
                   </div>
 
                   <div class="col-md-5">
@@ -228,7 +230,7 @@
 
               <div class="text-center mb-80 wow fadeInUp">
                   <h2 class="section-title text-uppercase">Work together</h2>
-                  <p class="section-sub">Join us and work with us. we provide complete solution for Websites with Android and iOS apps. You can also join our team if you can develop Websites,Android app or iOS apps. You are most welcome.</p>
+                  <p class="section-sub">Let’s work together on some unique and innovative idea for your business. Also join our team if you can develop Website, Android app or iOS apps. </p>
               </div>
 
               <div class="featured-carousel brand-dot">
@@ -238,7 +240,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are creative</h2>
-                          <p>We build creative ideas</p>
+                          <p>We, at prolong services build creative ideas &amp; create real impact through our design and development technology insights.</p>
                       </div>
                   </div><!-- /.featured-item -->
 
@@ -248,7 +250,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are awesome</h2>
-                          <p>Porttitor communicate pandemic data rather than enabled niche pandemic data rather markets neque pulvinar vitae.</p>
+                          <p>We thrive on turning ideas to reality with our powerful imagination, collaborating and creative process. </p>
                       </div>
                   </div><!-- /.featured-item -->
 
@@ -258,7 +260,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are Taltented</h2>
-                          <p>Porttitor communicate pandemic data rather than enabled niche pandemic data rather markets neque pulvinar vitae.</p>
+                          <p>We know how to explore technology, user experience to make exciting, measurable and useful digital experience.</p>
                       </div>
                   </div><!-- /.featured-item -->
 
@@ -288,7 +290,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are Developer</h2>
-                          <p>We develop Android,iOS apps and websites.</p>
+                          <p>We use latest techniques and tools to develop website and mobile applications for both Android and iOS platforms.</p>
                       </div>
                   </div><!-- /.featured-item -->
 
@@ -298,7 +300,7 @@
                       </div>
                       <div class="desc">
                           <h2>We are Designer</h2>
-                          <p>We design creative and logos for websites and brands.</p>
+                          <p>We focus on achieving your business goals by providing unique designing solution that stands you out from the crowd. </p>
                       </div>
                   </div><!-- /.featured-item -->
 
