--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
                           </div>
                           <div class="desc">
                               <h2>Creative Design</h2>
-                              <p>Porttitor communicate pandemic data rather than enabled niche markets neque rather than enabled niche markets neque pulvinar.</p>
+                              <p>We provide full range of graphic design solution for website and mobile application including innovative logos for websites and brand, app design and icons for Android and iOS apps and we also design flyer, brochure for marketing and sale.</p>
                           </div>
                       </div><!-- /.featured-item -->
                   </div><!-- /.col-md-4 -->
@@ -371,7 +371,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
                           </div>
                           <div class="desc">
                               <h2>Mobile Applicaion Design</h2>
-                              <p>Porttitor communicate pandemic data rather than enabled niche markets neque rather than enabled niche markets neque pulvinar.</p>
+                              <p>We take your business to next level with our custom mobile app development services for both android and iOS platforms. We design and develop native and highly performance centric mobile apps that engage more customers.</p>
                           </div>
                       </div><!-- /.featured-item -->
                   </div><!-- /.col-md-4 -->
