--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
                           </div>
 
                           <div class="content white-text">
-                            <p>We provide full range of graphic design solution for website and mobile application including innovative logos for websites and brand, app design and icons for Android and iOS apps and we also design flyer, brochure for marketing and sale. </p>
+                            <p>We design Creative Logos,Mobile screens</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -166,7 +166,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
                           </div>
 
                           <div class="content white-text">
-                            <p>Prolong services help businesses by providing full responsive bootstrap and jQuery website design. Our professional web designers always use new technology and tools which will enlighten your site and help to boost conversions. </p>
+                            <p>Full responsive Bootstrap and jQuery websites design.</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -182,7 +182,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
                           </div>
 
                           <div class="content white-text">
-                            <p>We take your business to next level with our custom mobile app development services for both android and iOS platforms. We design and develop native and highly performance centric mobile apps that engage more customers.</p>
+                            <p>Material design app for android and great looking apps for iOS.</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
@@ -197,7 +197,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
                           </div>
 
                           <div class="content white-text">
-                            <p>Product research is a collaboration of marketer research. Prolong services offers effective and innovative ideas that can increase your business’s chance of success. </p>
+                            <p>Searching for innovative ideas for creating beautiful things.</p>
                           </div>
                         </div><!-- /.featured-wrapper -->
                       </div><!-- /.featured-box  -->
