--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@ Our Experienced team of designers, developers and digital marketers analyze each
                               <i class="material-icons colored brand-icon">&#xE323;</i>
                           </div>
                           <div class="desc">
-                              <h2>Mobile Applicaion Design</h2>
-                              <p>We take your business to next level with our custom mobile app development services for both android and iOS platforms. We design and develop native and highly performance centric mobile apps that engage more customers.</p>
+                              <h2>Mobile Applicaion Development</h2>
+                              <p>We take your business to next level with our custom mobile app development services for both android and iOS platforms.</p>
                           </div>
                       </div><!-- /.featured-item -->
                   </div><!-- /.col-md-4 -->
