--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
 
               <div class="text-center mb-80 wow fadeInUp">
                   <h2 class="section-title text-uppercase">Who We Are</h2>
-                  <p class="section-sub">Quisque non erat mi. Etiam congue et augue sed tempus. Aenean sed ipsum luctus, scelerisque ipsum nec, iaculis justo. Sed at vestibulum purus, sit amet viverra diam nulla ac nisi rhoncus.</p>
+                  <p class="section-sub">Prolong Services full-service IT services Providers. We provide complete It solution to business at very affordable price within given time period.</p>
               </div>
 
               <div class="vertical-tab">
@@ -569,9 +569,9 @@ Our Experienced team of designers, developers and digital marketers analyze each
 
                                 <img class="alignright" src="assets/img/working_man.png" alt="">
 
-                                <p>Duis senectus mus condimentum nunc ac habitasse duis consectetur a arcu a accumsan cras et metus ultricies justo cum a bibendum. <a href="#">Egestas vestibulum blandit sem vestibulum curabitur</a> a vel aliquet gravida ullamcorper amet dictumst vestibulum a elementum proin id volutpat magna parturient.</p>
+                                <p>Prolong services is a full-service IT providers which provide effective business solution in designing, development and marketing. We help client overcome their most critical and complex business challenges. We are comprised of professional and experienced strategist, technologist, creative designers, developer and digital marketers. And together we form effective and meaningful solution for business and brands.</p>
 
-                                <p>Himenaeos a vestibulum morbi. <a href="#">Ullamcorper cras scelerisque</a> taciti lorem metus feugiat est lacinia facilisis id nam leo condimentum praesent id diam. Vestibulum amet porta odio elementum convallis parturient tempor tortor.</p>
+                                <p>We continually deliver results for our clients by first gaining a deep understanding of their business needs and then combining result-oriented strategy with highest level of execution. We at Prolong Services have a unique track in designing and developing websites and mobile applications with different platforms.</p>
                             </div>
                             
                             <div role="tabpanel" class="tab-pane fade" id="tab-7">
@@ -579,18 +579,16 @@ Our Experienced team of designers, developers and digital marketers analyze each
 
                                 <img class="alignright" src="assets/img/mission.png" alt="">
 
-                                <p>Duis senectus mus condimentum nunc ac habitasse duis consectetur a arcu a accumsan cras et metus ultricies justo cum a bibendum. <a href="#">Egestas vestibulum blandit sem vestibulum curabitur</a> a vel aliquet gravida ullamcorper amet dictumst vestibulum a elementum proin id volutpat magna parturient.</p>
+                                <p>Our mission is to provide high quality and professional services and to best development and digital marketing strategies to serve you best.</p>
 
-                                <p>Himenaeos a vestibulum morbi. <a href="#">Ullamcorper cras scelerisque</a> taciti lorem metus feugiat est lacinia facilisis id nam leo condimentum praesent id diam. Vestibulum amet porta odio elementum convallis parturient tempor tortor.</p>
+                                <p>Client success and growth is our first priority and we make this happen by applying best and perfect work strategy and also best quality control over working process.</p>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="tab-8">
                                 <h2>Our Team</h2>
 
                                 <img class="alignright" src="assets/img/business.png" alt="">
 
-                                <p>Duis senectus mus condimentum nunc ac habitasse duis consectetur a arcu a accumsan cras et metus ultricies justo cum a bibendum. <a href="#">Egestas vestibulum blandit sem vestibulum curabitur</a> a vel aliquet gravida ullamcorper amet dictumst vestibulum a elementum proin id volutpat magna parturient.</p>
-
-                                <p>Himenaeos a vestibulum morbi. <a href="#">Ullamcorper cras scelerisque</a> taciti lorem metus feugiat est lacinia facilisis id nam leo condimentum praesent id diam. Vestibulum amet porta odio elementum convallis parturient tempor tortor.</p>
+                                <p>We have a creative and professional team, each of which are talented and expert in technical skills and always provide good result which helps you in your business success. Our team consists of web designer, graphic designer, web developers, mobile app developers and digital marketers who regularly work in collaboration with the project to fulfill the requirements within given time limit.</p>
                             </div>
                             
                           </div>
@@ -608,7 +606,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
 
               <div class="text-center mb-80 wow fadeInUp">
                   <h2 class="section-title text-uppercase">Awesome skills</h2>
-                  <p class="section-sub">Quisque non erat mi. Etiam congue et augue sed tempus. Aenean sed ipsum luctus, scelerisque ipsum nec, iaculis justo. Sed at vestibulum purus, sit amet viverra diam nulla ac nisi rhoncus.</p>
+                  <p class="section-sub">We have a creative and professional team, each of which are talented and expert in technical skills and always provide good result which helps you in your business success. Our team consists of web designer, graphic designer, web developers, mobile app developers and digital marketers who regularly work in collaboration with the project to fulfill the requirements within given time limit.</p>
               </div>
 
 
