--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@ Our Experienced team of designers, developers and digital marketers analyze each
                               <i class="material-icons colored brand-icon">&#xE02C;</i>
                           </div>
                           <div class="desc">
-                              <h2>Moting Graphics Design</h2>
-                              <p>Porttitor communicate pandemic data rather than enabled niche markets neque rather than enabled niche markets neque pulvinar.</p>
+                              <h2>Web Development</h2>
+                              <p>Our expert website development team capable of building every type of website ranging from simple to complex. We provide sophisticated and high end solution for all your website development needs.</p>
                           </div>
                       </div><!-- /.featured-item -->
                   </div><!-- /.col-md-4 -->
