--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@ Our Experienced team of designers, developers and digital marketers analyze each
                               <i class="material-icons colored brand-icon">&#xE412;</i>
                           </div>
                           <div class="desc">
-                              <h2>Professional Photography</h2>
-                              <p>Porttitor communicate pandemic data rather than enabled niche markets neque rather than enabled niche markets neque pulvinar.</p>
+                              <h2>Digital Marketing</h2>
+                              <p>Prolong services result-oriented digital marketing services help small to large business to maintain their reputation in the market and generate sale.</p>
                           </div>
                       </div><!-- /.featured-item -->
                   </div><!-- /.col-md-4 -->
@@ -368,7 +368,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
                           </div>
                           <div class="desc">
                               <h2>Web Development</h2>
-                              <p>Our expert website development team capable of building every type of website ranging from simple to complex. We provide sophisticated and high end solution for all your website development needs.</p>
+                              <p>Our expert website development team capable of building every type of website ranging from simple to complex.</p>
                           </div>
                       </div><!-- /.featured-item -->
                   </div><!-- /.col-md-4 -->
