--- a/index.html
+++ b/index.html
@@ -740,8 +740,7 @@ Our Experienced team of designers, developers and digital marketers analyze each
 
                       <i class="material-icons brand-color">&#xE0B7;</i>
                       <div class="mail">
-                        <p><a href="mailto:#">sales@prolongservices.com</a><br>
-                        <a href="#">www.prolongservices.com</a></p>
+                        <p><a href="mailto:#">sales@prolongservices.com</a></p>
                       </div>
                     </address>
                 </div><!-- /.col-md-4 -->
